--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "plugins/dependencies/panda/panda-wrapper"]
 	path = plugins/dependencies/panda/panda-wrapper
 	url = https://github.com/panda-re/panda
+[submodule "plugins/dependencies/libosi"]
+	path = plugins/dependencies/libosi
+	url = https://github.com/panda-re/libosi
+	branch = dev
