--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -59,14 +59,14 @@ include_directories(third-party)
 add_subdirectory(net)
 add_subdirectory(network)
 add_subdirectory(res)
-#add_subdirectory(network_pcap)
-#add_subdirectory(ipanda)
-#add_subdirectory(typesignature)
-#add_subdirectory(process_introspection)
-#add_subdirectory(syscall_tracer)
-#add_subdirectory(bbstats)
-#add_subdirectory(callstack)
-#add_subdirectory(apicall_tracer)
-#add_subdirectory(memory_regions)
-#add_subdirectory(pmemdump)
+add_subdirectory(network_pcap)
+add_subdirectory(ipanda)
+add_subdirectory(typesignature)
+add_subdirectory(process_introspection)
+add_subdirectory(syscall_tracer)
+add_subdirectory(bbstats)
+add_subdirectory(callstack)
+add_subdirectory(apicall_tracer)
+add_subdirectory(memory_regions)
+add_subdirectory(pmemdump)
 #add_subdirectory(volatility)
