--- a/plugins/typesignature/CMakeLists.txt
+++ b/plugins/typesignature/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 set(SRC_FILES find_syscall_database.cc syscall_database.cc osi_syscalls.cc)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-set(LINK_LIBS libiohal liboffset libosi)
+set(LINK_LIBS -liohal -loffset -losi)
 set(LINK_LIBS_I386 ${LINK_LIBS} panda_ipanda-i386)
 set(LINK_LIBS_X86_64 ${LINK_LIBS} panda_ipanda-x86_64)
 
