--- a/plugins/apicall_tracer/CMakeLists.txt
+++ b/plugins/apicall_tracer/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SRC_FILES ${PANDA_PLUGIN_NAME}.cc
                         process/vad.cpp
                         trace_filter.cc)
 
-set(LINK_LIBS -lsqlite3 -losi -loffset -liohal)
+set(LINK_LIBS sqlite3 libosi liboffset libiohal)
 
 
 set(LINK_LIBS_I386 ${LINK_LIBS}  panda_support_typesignature-i386 panda_ipanda-i386 panda_callstack-i386)
