--- a/plugins/dependencies/panda/CMakeLists.txt
+++ b/plugins/dependencies/panda/CMakeLists.txt
@@ -24,6 +24,7 @@ ExternalProject_Add(panda-ext
     SOURCE_DIR        "${PROJECT_SOURCE_DIR}/panda-wrapper"
     BINARY_DIR        "${CMAKE_BINARY_DIR}/panda-internal-build"
     INSTALL_DIR       "${CMAKE_INSTALL_PREFIX}"
+###CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/panda-wrapper/configure --target-list=x86_64-softmmu,i386-softmmu --prefix=${CMAKE_INSTALL_PREFIX}
     CONFIGURE_COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/panda-wrapper/configure --target-list=x86_64-softmmu,i386-softmmu,arm-softmmu,aarch64-softmmu,ppc-softmmu,mips-softmmu,mipsel-softmmu --enable-llvm --with-llvm=/usr/lib/llvm-11 --prefix=${CMAKE_INSTALL_PREFIX}
     
     BUILD_COMMAND make ${EP_BUILD_ACCEL_FLAG}
