commented out volatility plugin since this one uses python 2.7, user can enable it but need to have python2.7 in system

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -70,4 +70,4 @@ add_subdirectory(callstack)
 add_subdirectory(apicall_tracer)
 add_subdirectory(memory_regions)
 add_subdirectory(pmemdump)
-add_subdirectory(volatility)
+#add_subdirectory(volatility)
