fix: tagging panda v1.8.54

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "plugins/dependencies/panda/panda-wrapper"]
 	path = plugins/dependencies/panda/panda-wrapper
 	url = https://github.com/panda-re/panda
+	branch = v1.8.54
 [submodule "plugins/dependencies/libosi"]
 	path = plugins/dependencies/libosi
 	url = https://github.com/panda-re/libosi
