Switch naming for panda and panda-wrapper dirs

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -40,17 +40,17 @@ include("Macros.cmake")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fno-omit-frame-pointer -DNEED_CPU_H -DNCURSES_WIDECHAR -D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -fPIE -DPIE -m64 -mcx16 -DXC_WANT_COMPAT_DEVICEMODEL_API -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE")
 
 message("Building PANDA3 plugins... ")
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/)
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/include/)
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/panda/include/)
+include_directories(${PANDA_SRC_DIR}/panda/)
+include_directories(${PANDA_SRC_DIR}/panda/include/)
+include_directories(${PANDA_SRC_DIR}/panda/panda/include/)
 
 include_directories(${CMAKE_BINARY_DIR}/plugins-panda-build/panda-internal-build/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/target/i386)
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/tcg/i386/)
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/tcg/)
-include_directories(${PANDA_SRC_DIR}/panda-wrapper/)
+include_directories(${PANDA_SRC_DIR}/panda/target/i386)
+include_directories(${PANDA_SRC_DIR}/panda/tcg/i386/)
+include_directories(${PANDA_SRC_DIR}/panda/tcg/)
+include_directories(${PANDA_SRC_DIR}/panda/)
 set(X32_PLUGIN_INCLUDES ${PLUGIN_INCLUDES} ${CMAKE_BINARY_DIR}/plugins-panda-build/panda-internal-build/i386-softmmu)
 set(X64_PLUGIN_INCLUDES ${PLUGIN_INCLUDES} ${CMAKE_BINARY_DIR}/plugins-panda-build/panda-internal-build/x86_64-softmmu)
 
