Add optional arg for panda target architectures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(PANDA_ARCHS "i386-softmmu,x86_64-softmmu" CACHE STRING "The target architectures to build PANDA")
+
 find_package(PkgConfig REQUIRED)
 include(ExternalProject)
 
@@ -19,6 +21,7 @@ ExternalProject_Add(panda-ext
         -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
         -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+	-DPANDA_ARCHS=${PANDA_ARCHS}
         ${USE_PROJECT_CMAKE_MODULE_PATH}
 )
 
